test/spec_vectors/i32/fail/module_38.wat
(module (func $type-binary-2nd-operand-empty-in-select (select (i32.const 0) (i32.add) (i32.const 1) (i32.const 2)) (drop)))